--- a/index.html
+++ b/index.html
@@ -3,4 +3,5 @@
 <a href="repository.glive-1.0.3.zip">repository.glive-1.0.3.zip</a><br>
 <a href="repository.gscribe-1.0.1.zip">repository.gscribe-1.0.1.zip</a><br>
 <a href="repository.gsports-1.0.1.zip">repository.gsports-1.0.1.zip</a><br>
+<a href="repository.gtube-1.0.0.zip">repository.gtube-1.0.0.zip</a><br>
 <a href="repository.dirtyg-1.0.1.zip">repository.dirtyg-1.0.1.zip</a><br>
