--- a/dirtyg/index.html
+++ b/dirtyg/index.html
@@ -1,2 +1,2 @@
 <!DOCTYPE html>
-<a href="repository.dirtyg-1.0.1">repository.dirtyg-1.0.1</a><br>
+<a href="repository.dirtyg-1.0.1.zip">repository.dirtyg-1.0.1.zip</a><br>
