--- a/index.html
+++ b/index.html
@@ -5,3 +5,4 @@
 <a href="repository.gsports-1.0.1.zip">repository.gsports-1.0.1.zip</a><br>
 <a href="repository.gtube-1.0.1.zip">repository.gtube-1.0.1.zip</a><br>
 <a href="repository.dirtyg-1.0.1.zip">repository.dirtyg-1.0.1.zip</a><br>
+<a href="plugin.video.watchnixtoons2-0.6.1.zip">plugin.video.watchnixtoons2-0.6.1.zip</a><br>
